2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Include f8 port in compile farm regression testing.

2024-09-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* components/sdcc.mk:
	  Fix path and make line prefix in check for uninstalling older version before regression testing.

2023-04-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Test z80 port with --allow-unsafe-read.

2023-01-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* components/sdcc.mk:
	  Make executable extension explicit in command line argument (apparently necessary on newer wine).

2023-01-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc-build/lib/bootstrap.mk:
	  Fix bug #3698.

2023-01-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc-build/lib/bootstrap.mk:
	  Fix bug #3686.

2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc-build/lib/variables.mk:
	  Enable mos65c02 port.

2022-10-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* local/powerpc64-linux-gnu.mk:
	  Example .mk for GNU/Linux on Power 9 (as currently used by nemesis in the compile farm).

2022-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Enable regression testing for r800 port.

2022-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Enable regression testing for s08-stack-auto.

2023-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* lib/doc-archive.mk:
	  Fix bug #3575.

2022-11-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: move cc1.exe to the build bin directory
	  so it can be installed properly

2022-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* lib/doc-archive.mk:
	  Fix bug #3345.

2022-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Rename mcs51-stack-auto to mcs51-small-stack-auto for consistency with mcs51-small and mcs51-large-stack-auto.

2022-04-02 Philipp Klaus Krause <pkk AT spth.de>
