@@ -1,3 +1,8 @@
+2024-11-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* lib/doc-archive.mk: Avoid building things unnecessary for
+	  the documentation. Use new ucsim/docs directory.
+
 2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* lib/variables.mk:
